syntax = "proto3";

package blachris.arpcnet.test;
option java_package = "com.github.blachris.arpcnet.test";
option go_package = "github.com/blachris/arpcnet/test";

message TestMessage {
    string text = 1;
    bytes data = 2;    
}

service Test {
    rpc UnaryCall(TestMessage) returns (TestMessage);
    rpc ServerStream(TestMessage) returns (stream TestMessage);
    rpc BidiStream(stream TestMessage) returns (stream TestMessage);
}